# ChatRoom

./: CMakeLists.txt  Readme.md
Client/: CMakeLists.txt  chatRoom_cli.c  chatRoom_client.c  config.json
Client/common/: cJSON.c  common.c
Client/include/common/: common.h  global.h
Client/include/service/: accountSrv.h  chatSrv.h  connect.h  service.h
Client/include/view/: account_UI.h  chat_UI.h  hello_UI.h
Client/service/: accountSrv.c  chatSrv.c  connect.c  service.c
Client/view/: account_UI.c  chat_UI.c  hello_UI.c  hello_UI.h
Server/: CMakeLists.txt  chatRoom_server.c  chatRoom_srv.c  config.json
Server/common/: cJSON.c  common.c  sha256.c
Server/dao/: accountDao.c  chatDao.c  db_connect.c
Server/database/: chatRoom.db
Server/include/commom/: List.h  common.h  global.h
Server/include/common/: List.h  common.h  global.h
Server/include/dao/: accountDao.h  chatDao.h  db_connect.h
Server/include/service/: accountSrv.h  chatSrv.h  connect.h  service.h
Server/service/: accountSrv.c  chatSrv.c  connect.c  service.c
